# main/static/swagger.yml
@@ -7,7 +7,22 @@ info:
 tags:
   - name: Users
     description: API for handling users and user authentication
+  - name: Subways
+    description: API for getting subways
 paths:
+  "/subways":
+    get:
+      tags:
+        - Subways
+      summary: Returns a list of subways
+      description: Returns a list of subways
+      responses:
+        '200':
+          description: A list of subways
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/SubwayListSchema"
   "/users":
     get:
       tags:
@@ -160,6 +175,32 @@ components:
           type: integer
         total:
           type: integer
+    SubwaySchema:
+      properties:
+        uid:
+          type: string
+        geo_position:
+          type: string
+        name:
+          type: string
+        line:
+          type: string
+        notes:
+          type: array
+          items:
+            type: string
+        url:
+          type: string
+        created_at:
+          type: integer
+        updated_at:
+          type: integer
+    SubwayListSchema:
+      properties:
+        subways:
+          type: array
+          items:
+            "$ref": "#/components/schemas/SubwaySchema"
   securitySchemes:
     cookieAuth:
       type: apiKey
